# noroshi

./: CLAUDE.md  LICENSE  README.md  index.html  mdns-manager-spec.md  noroshi-spec.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml  sync-upstream.yml
docs/: STRATEGY.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error.rs  lib.rs  logging.rs  main.rs  mdns.rs  models.rs  network.rs  state.rs
src/components/: BulkActions.tsx  Layout.tsx  LogViewer.tsx  MonitoringView.tsx  NetworkInfo.tsx  ServiceFormDialog.tsx  ServiceRow.tsx  ServiceTable.tsx  SettingsView.tsx  StatusDashboard.tsx  TxtRecordEditor.tsx
src/hooks/: useMonitoring.ts  useServices.ts
src/lib/: commands.ts
src/types/: index.ts
