[package]
name = "mdns-manager"
version = "0.1.0"
description = "mDNS service advertisement manager"
authors = ["you"]
edition = "2021"

[lib]
name = "mdns_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mdns-sd = "0.17"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
hostname = "0.4"
chrono = { version = "0.4", features = ["serde"] }
if-addrs = "0.13"
